# Copper

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
runner/: c_executor.h  ospath.h
runner/tests/: CMakeLists.txt  test_c_executor.c
utils/: CMakeLists.txt  CStr.cpp  CStr.h  char_buf.c  char_buf.h  chop_chop_hash.c  chop_chop_hash.h  test_helpers.c  test_helpers.h
utils/tests/: CMakeLists.txt  CStrTests.cpp  ChopChopTests.cpp
